distribution/kubeflow/common/istio/cognito-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
  labels:
    app: kubeflow
    name: istio-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/auth-type: cognito
    alb.ingress.kubernetes.io/auth-scope: openid
    # Cognito parameters required for creation of authentication rules
    # The subdomain name only is sufficient for `UserPoolDomain`
    # e.g. if `FQDN=app.auth.ap-northeast-1.amazoncognito.com` then `UserPoolDomain=app`
    alb.ingress.kubernetes.io/auth-idp-cognito: '{"UserPoolArn": <<__cognito_user_pool.arn__>>	,"UserPoolClientId": <<__cognito_user_pool.client_id__>>,"UserPoolDomain": <<__cognito_user_pool.domain__>>}'
    # ACM certificate ARN for your SSL domain
    alb.ingress.kubernetes.io/certificate-arn: <<__acm_certificate_arn__>>
spec:
  rules:
    - host: "<<__subdomain_dashboard__>>.<<__domain__>>"
      http:
        paths:
          - backend:
              serviceName: istio-ingressgateway
              servicePort: 80
            path: "/*"
    - host: "<<__subdomain_serving__>>.<<__domain__>>"
      http:
        paths:
          - backend:
              serviceName: istio-ingressgateway
              servicePort: 80
            path: "/*"
    - host: "*.<<__subdomain_serving__>>.<<__domain__>>"
      http:
        paths:
          - backend:
              serviceName: istio-ingressgateway
              servicePort: 80
            path: "/*"
  tls:
    - hosts:
        - "<<__subdomain_dashboard__>>.<<__domain__>>"
        - "<<__subdomain_serving__>>.<<__domain__>>"
        - "*.<<__subdomain_serving__>>.<<__domain__>>"
      secretName: istio-ingressgateway-certs
